Examples/2024-02-wise-lending/result/slither_contracts/PendleLpOracle.txt
'forge config --json' running
'/Users/tanzezhong/.solc-select/artifacts/solc-0.8.24/solc-0.8.24 --version' running
'/Users/tanzezhong/.solc-select/artifacts/solc-0.8.24/solc-0.8.24 ds-test/=lib/forge-std/lib/ds-test/src/ forge-std/=lib/forge-std/src/ /Users/tanzezhong/GPT4Bugs-main/Examples/2024-02-wise-lending/contracts/DerivativeOracles/PendleLpOracle.sol --combined-json abi,ast,bin,bin-runtime,srcmap,srcmap-runtime,userdoc,devdoc,hashes --optimize --optimize-runs 20 --evm-version shanghai --allow-paths .,/Users/tanzezhong/GPT4Bugs-main/Examples/2024-02-wise-lending/contracts/DerivativeOracles' running
Compilation warnings/errors on /Users/tanzezhong/GPT4Bugs-main/Examples/2024-02-wise-lending/contracts/DerivativeOracles/PendleLpOracle.sol:
Error: Source "node_modules/@pendle/core-v2/contracts/oracles/PendleLpOracleLib.sol" not found: File not found. Searched the following locations: "".
  --> contracts/DerivativeOracles/PendleLpOracle.sol:19:1:
   |
19 | import  {
   | ^ (Relevant source part starts here and spans across multiple lines).


ERROR:Slither:Unable to compile all targets.
